test_next-20170719/20170718220034/build/defconfig/build_20170718220034_log.txt
test_build: Tue Jul 18 22:03:26 PDT 2017: started on defconfig test_next-20170719 (c981f0b3fb08ee58aacb208fe7f45628af420bba)
test_build: Tue Jul 18 22:03:26 PDT 2017: serial is 20170718220034
arch/arm64/Makefile:23: ld does not support --fix-cortex-a53-843419; kernel may be susceptible to erratum
arch/arm64/Makefile:44: Detected assembler with broken .inst; disassembly will be unreliable
arch/arm64/kernel/acpi.c:98:14: error: conflicting types for ‘__acpi_map_table’
 char *__init __acpi_map_table(unsigned long phys, unsigned long size)
              ^
In file included from arch/arm64/kernel/acpi.c:18:0:
./include/linux/acpi.h:231:15: note: previous declaration of ‘__acpi_map_table’ was here
 void __iomem *__acpi_map_table(unsigned long phys_addr, unsigned long size);
               ^
arch/arm64/kernel/acpi.c:106:13: error: conflicting types for ‘__acpi_unmap_table’
 void __init __acpi_unmap_table(char *map, unsigned long size)
             ^
In file included from arch/arm64/kernel/acpi.c:18:0:
./include/linux/acpi.h:232:6: note: previous declaration of ‘__acpi_unmap_table’ was here
 void __acpi_unmap_table(void __iomem *map, unsigned long size);
      ^
make[1]: *** [arch/arm64/kernel/acpi.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [arch/arm64/kernel] Error 2
make: *** Waiting for unfinished jobs....
test_build: Tue Jul 18 22:05:11 PDT 2017: FAILED on defconfig test_next-20170719
test_build: Tue Jul 18 22:05:11 PDT 2017: ended on defconfig test_next-20170719
